tests/snapshots/test_tags__artifact_add_tag.snap
---
source: tests/tag_tests/mod.rs
expression: value
---
$ govctl tag new caching
Added tag: caching
exit: 0

$ govctl adr new Test Decision
Created ADR: gov/adr/ADR-XXXX-test-decision.toml
exit: 0

$ govctl adr edit ADR-0001 tags --add caching
Added 'caching' to ADR-0001.tags
exit: 0

$ govctl adr get ADR-0001 tags
caching
exit: 0
