tests/snapshots/test_tags__artifact_add_unregistered_tag.snap
---
source: tests/tag_tests/mod.rs
expression: value
---
$ govctl adr new Test Decision
Created ADR: gov/adr/ADR-XXXX-test-decision.toml
exit: 0

$ govctl adr edit ADR-0001 tags --add nonexistent
error[E1105]: Tag 'nonexistent' is not in config.toml [tags] allowed. Register it first with: govctl tag new nonexistent (ADR-0001)
exit: 1
