tests/snapshots/test_tags__check_accepts_registered_tag.snap
---
source: tests/tag_tests/mod.rs
expression: value
---
$ govctl adr new Test Decision
Created ADR: gov/adr/ADR-XXXX-test-decision.toml
exit: 0

$ govctl adr edit ADR-0001 tags --add caching
Added 'caching' to ADR-0001.tags
exit: 0

$ govctl check
Checked:
  0 RFCs
  0 clauses
  1 ADRs
  0 work items
  0 verification guards
  0 conformance cases

warning[W0103]: ADR has no artifact references (hint: `govctl adr edit ADR-0001 refs --add RFC-XXXX`) (gov/adr/ADR-XXXX-test-decision.toml)
warning[W0113]: ADR has placeholder context (hint: `govctl adr edit ADR-0001 context --set "..."`) (gov/adr/ADR-XXXX-test-decision.toml)
exit: 0
