tests/snapshots/test_tags__check_rejects_unknown_tag.snap
---
source: tests/tag_tests/mod.rs
expression: value
---
$ govctl check
Checked:
  0 RFCs
  0 clauses
  1 ADRs
  0 work items
  0 verification guards

warning[W0103]: ADR has no artifact references (hint: `govctl adr edit ADR-0001 refs --add RFC-XXXX`) (gov/adr/ADR-XXXX-test-decision.toml)
warning[W0113]: ADR has placeholder context (hint: `govctl adr edit ADR-0001 context --set "..."`) (gov/adr/ADR-XXXX-test-decision.toml)
error[E1105]: Artifact 'ADR-0001' uses unknown tag 'unknown-tag' (not in config.toml [tags] allowed) (gov/adr/ADR-XXXX-test-decision.toml)
exit: 1
