tests/snapshots/test_tags__list_filter_by_tag.snap
---
source: tests/tag_tests/mod.rs
expression: value
---
$ govctl adr list --tag caching
[
  {
    "id": "ADR-0001",
    "status": "proposed",
    "date": "<DATE>",
    "title": "Tagged Decision"
  }
]
exit: 0
