tests/snapshots/test_tags__list_filter_multiple_tags.snap
---
source: tests/tag_tests/mod.rs
expression: value
---
$ govctl adr list --tag caching,performance
[
  {
    "id": "ADR-0001",
    "status": "proposed",
    "date": "<DATE>",
    "title": "Multi-Tagged Decision"
  }
]
exit: 0

$ govctl adr list --tag caching,security
[]
exit: 0
