tests/snapshots/test_tags__tag_delete_referenced.snap
---
source: tests/tag_tests/mod.rs
expression: value
---
$ govctl tag new caching
Added tag: caching
exit: 0

$ govctl adr new Test Decision
Created ADR: gov/adr/ADR-XXXX-test-decision.toml
exit: 0

$ govctl adr edit ADR-0001 tags --add caching
Added 'caching' to ADR-0001.tags
exit: 0

$ govctl tag delete caching
error[E1104]: Cannot delete tag 'caching': still used by 1 artifact(s). Remove the tag from all artifacts first. (caching)
exit: 1
