tests/snapshots/test_tags__tag_new.snap
---
source: tests/test_tags.rs
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl tag new caching
Added tag: caching
exit: 0

$ govctl tag list
┌─────────┬───────┐
│ Tag     ┆ Usage │
╞═════════╪═══════╡
│ caching ┆ 0     │
└─────────┴───────┘
exit: 0
